# B3-Connector

./: .clang-format  .editorconfig  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CLAUDE.md  README.md  b3-md-connector.conf  b3-oe-connector.conf  salida.txt
.claude/: settings.local.json
b3-common/: CMakeLists.txt
b3-common/include/b3/common/: InstrumentData.hpp  InstrumentRegistry.hpp
b3-md-connector/: CMakeLists.txt  SETUP.md  SIMULATOR.md  b3-connectivity.xml.example  b3-md-connector.conf.example  salida.txt
b3-md-connector/.devcontainer/: .env  .env.sample  Dockerfile.dev  devcontainer.json  download-protobuf-cache.sh
b3-md-connector/src/: BookSnapshotBuilder.hpp  DESIGN.md  FakePublisher.hpp  IMdPublisher.hpp  IOrderBookView.hpp  MarketDataEngine.cpp  MarketDataEngine.hpp  MdPublishPipeline.hpp  MdPublishWorker.hpp  MdSnapshotMapper.hpp  MessagingLibIntegrationTest.cpp  MessagingServer.cpp  MessagingServer.hpp  SnapshotQueueSpsc.hpp  TopNBookSnapshot.hpp  b3-md-connector.conf  main.cpp  salida_1.txt  salida_2.txt  salida_3.txt  salida_4.txt  salida_5.txt  simulator_main.cpp
b3-md-connector/src/core/: B3MdSubscriptionServer.hpp  BookSnapshot.hpp  BookSnapshotBuilder.hpp  IMarketDataHandler.hpp  IOrderBookView.hpp  MarketDataEngine.hpp  MboToMbpAggregator.hpp  MdPublishPipeline.hpp  MdPublishWorker.hpp  OrdersSnapshot.hpp  SnapshotQueueSpsc.hpp  SubscriptionRegistry.hpp
b3-md-connector/src/mapping/: InstrumentData.hpp  InstrumentRegistry.hpp  InstrumentTopicMapper.hpp  MdSnapshotMapper.hpp
b3-md-connector/src/messaging/: B3MdSubscriptionServer.cpp  B3MdSubscriptionServer.hpp
b3-md-connector/src/onixs/: B3InstrumentRegistryListener.hpp  OnixOrderBookView.hpp  OnixsHandlerWrapper.hpp  OnixsOrderBookListener.hpp  OnixsOrdersSnapshotBuilder.hpp
b3-md-connector/src/publishing/: IPublishSink.hpp  PublishEvent.hpp  PublishMessage.hpp  SerializedEnvelope.hpp  ZmqPublishConcentrator.hpp
b3-md-connector/src/telemetry/: ILogSink.hpp  LogEvent.hpp  LogQueueSpsc.hpp  SpdlogLogPublisher.hpp
b3-md-connector/src/testsupport/: FakeInstrumentTopicMapper.hpp  FakeOnixsHandler.hpp  FakePublisher.hpp  OrdersSnapshotFromMbpView.hpp  securities.json  test_client_main.cpp
b3-oe-connector/: CMakeLists.txt
b3-oe-connector/.devcontainer/: Dockerfile.dev  devcontainer.json  download-protobuf-cache.sh
b3-oe-connector/src/: AppRuntime.cpp  AppRuntime.h  OrderEngine.cpp  OrderEngine.hpp  OrderMessagingServer.cpp  OrderMessagingServer.hpp  main.cpp
b3-oe-connector/src/boe/: BoeSessionListener.cpp  BoeSessionListener.h  BoeSessionManager.cpp  BoeSessionManager.h  BoeSessionSender.cpp  BoeSessionSender.h  SessionListener.hpp
b3-oe-connector/src/common/: ConfigParser.hpp  FixedString.hpp  IOrderStateSink.hpp  MpscPodQueue.hpp  TextParse.hpp
b3-oe-connector/src/events/core/: BoeEventPOD.hpp  ILatencyTracker.hpp  OrderEventProcessingLoop.cpp  OrderEventProcessingLoop.h  SerializedEnvelope.hpp  WrapperSerializer.hpp
b3-oe-connector/src/events/publish/: EnvelopePublisher.hpp  MessagingPublisherFacade.hpp
b3-oe-connector/src/infrastructure/: SecurityListClient.hpp
b3-oe-connector/src/orders/core/: OrderCommandDispatcher.hpp  OrderCommandHandler.cpp  OrderCommandHandler.h  OrderCommandValidator.hpp  OrderRateLimiter.hpp  OrderTranslator.cpp  OrderTranslator.h  OwnedBoeMessage.hpp  Translator.hpp
b3-oe-connector/src/orders/server/: OrderCommandServer.hpp  OrderMessagingServer.cpp  OrderMessagingServer.h
docs/: INSTRUMENT_ID_MAPPING.md
libs/markethub/messaging/include/clients/: Heartbeat.h  PublisherSubscriber.h
libs/markethub/messaging/include/models/: events.pb.h  messageTypes.h  messages.pb.h  otc.pb.h  risk_management.pb.h  rofex.pb.h  system.pb.h  trading.pb.h
libs/markethub/messaging/include/models/events/: connector.pb.h  eventTypes.h  strategy.pb.h
libs/markethub/messaging/include/servers/: SubscriberPublisher.h
libs/markethub/messaging/include/sockets/: Publisher.h  Subscriber.h
tests/: CMakeLists.txt
tests/md/: CMakeLists.txt  FakeOrderBook.hpp  FakePublishSink.hpp  salida_1.txt  salida_2.txt  salida_3.txt  test_MarketDataEngine.cpp  test_mbo_to_mbp_aggregator.cpp  test_mbo_to_mbp_ordering_contract.cpp  test_md_core.cpp  test_md_engine.cpp  test_md_pipeline.cpp  test_md_worker.cpp  test_messaging_lib_integration.cpp  test_spdlog_log_publisher.cpp  test_subscription_server.cpp
tests/oe/: CMakeLists.txt  Test_OrderEngine.cpp
